@@ -10,6 +10,8 @@ plugins {
     alias(libs.plugins.buildconfig)
     alias(libs.plugins.vanniktech.maven.publish)
     alias(libs.plugins.shadow)
+    `java-test-fixtures`
+    `jvm-test-suite`
 }
 
 repositories {
@@ -66,56 +68,57 @@ sourceSets {
 }
 
 dependencies {
-    implementation(project(":repl-shared"))
-    implementation(libs.gradle.tooling.api)
+    api(project(":repl-shared"))
+    api(libs.gradle.tooling.api)
 
-    implementation(libs.caffeine)
-    implementation(libs.commons.io)
+    api(libs.caffeine)
+    api(libs.commons.io)
 
-    implementation(libs.kotlin.reflect)
-    implementation(libs.schema.kenerator.core)
-    implementation(libs.schema.kenerator.serialization)
-    implementation(libs.schema.kenerator.jsonschema)
-    implementation(libs.kotlinx.serialization.json)
+    api(libs.kotlin.reflect)
+    api(libs.schema.kenerator.core)
+    api(libs.schema.kenerator.serialization)
+    api(libs.schema.kenerator.jsonschema)
+    api(libs.kotlinx.serialization.json)
 
-    implementation(libs.flexmark.html2md)
+    api(libs.flexmark.html2md)
 
-    implementation(libs.kotlinx.coroutines.core)
-    implementation(libs.mcp.sdk)
-    implementation(libs.jsoup)
-    implementation(libs.koin.core)
-    implementation(libs.koin.ktor)
-    implementation(libs.koin.logger.slf4j)
-    implementation(libs.ktor.server.netty)
-    implementation(libs.ktor.server.di)
-    implementation(libs.ktor.server.sse)
-    implementation(libs.ktor.serialization.kotlinx.json)
-    implementation(libs.ktor.server.config.yaml)
-    implementation(libs.ktor.client.cio)
-    implementation(libs.ktor.client.content.negotiation)
-    implementation(libs.ktor.serialization.kotlinx.xml)
-    implementation(libs.ktor.serialization.kotlinx.json)
-    implementation(libs.logback.classic)
+    api(libs.kotlinx.coroutines.core)
+    api(libs.mcp.sdk)
+    api(libs.jsoup)
+    api(libs.koin.core)
+    api(libs.koin.ktor)
+    api(libs.koin.logger.slf4j)
+    api(libs.ktor.server.netty)
+    api(libs.ktor.server.di)
+    api(libs.ktor.server.sse)
+    api(libs.ktor.serialization.kotlinx.json)
+    api(libs.ktor.server.config.yaml)
+    api(libs.ktor.client.cio)
+    api(libs.ktor.client.content.negotiation)
+    api(libs.ktor.serialization.kotlinx.xml)
+    api(libs.ktor.serialization.kotlinx.json)
+    api(libs.logback.classic)
 
-    implementation(libs.lucene.core)
-    implementation(libs.lucene.codecs)
-    implementation(libs.lucene.analysis.common)
-    implementation(libs.lucene.queryparser)
-    implementation(libs.lucene.highlighter)
+    api(libs.lucene.core)
+    api(libs.lucene.codecs)
+    api(libs.lucene.analysis.common)
+    api(libs.lucene.queryparser)
+    api(libs.lucene.highlighter)
 
-    implementation(libs.treesitter)
-    implementation(libs.treesitter.java)
-    implementation(libs.treesitter.kotlin)
+    api(libs.treesitter)
+    api(libs.treesitter.java)
+    api(libs.treesitter.kotlin)
 
-    testImplementation(libs.kotlin.test)
-    testImplementation(libs.kotlinx.coroutines.test)
-    testImplementation(libs.junit.jupiter)
-    testImplementation(libs.mockk)
-    testImplementation(libs.koin.test)
-    testImplementation(libs.koin.test.junit5)
-    testImplementation(libs.ktor.client.cio)
-    testImplementation(libs.ktor.client.content.negotiation)
-    testImplementation(libs.ktor.client.mock)
+    testFixturesApi(project)
+    testFixturesApi(libs.kotlin.test)
+    testFixturesApi(libs.kotlinx.coroutines.test)
+    testFixturesApi(libs.junit.jupiter)
+    testFixturesApi(libs.mockk)
+    testFixturesApi(libs.koin.test)
+    testFixturesApi(libs.koin.test.junit5)
+    testFixturesApi(libs.ktor.client.cio)
+    testFixturesApi(libs.ktor.client.content.negotiation)
+    testFixturesApi(libs.ktor.client.mock)
 }
 
 kotlin {
@@ -132,11 +135,36 @@ kotlin {
 
 val isCI = providers.environmentVariable("CI").orNull != null
 
-tasks.test {
+testing {
+    suites {
+        val integrationTest by registering(JvmTestSuite::class) {
+            dependencies {
+                implementation(project())
+                implementation(project.dependencies.testFixtures(project()))
+            }
+
+
+            targets {
+                all {
+                    testTask.configure {
+                        maxParallelForks = if (isCI) 3 else 6
+                        shouldRunAfter(tasks.test)
+                    }
+                }
+            }
+        }
+    }
+}
+
+tasks.withType<Test>().all {
+    jvmArgs("--add-modules", "jdk.incubator.vector")
     useJUnitPlatform()
     systemProperty("GRADLE_MCP_LOG_DIR", layout.buildDirectory.dir("test-logs").get().asFile.absolutePath)
     systemProperty("docs.updateSnapshots", System.getProperty("docs.updateSnapshots"))
-    maxParallelForks = if (isCI) 3 else 6
+}
+
+tasks.named("check") {
+    dependsOn(testing.suites.named("integrationTest"))
 }
 
 tasks.named<UpdateDaemonJvm>("updateDaemonJvm") {
@@ -144,21 +172,25 @@ tasks.named<UpdateDaemonJvm>("updateDaemonJvm") {
 }
 
 buildConfig {
+    sourceSets.named("testFixtures") {
+        useKotlinOutput { internalVisibility = false }
+        buildConfigField("KOTLIN_VERSION", libs.versions.kotlin.get())
+        buildConfigField("KOTLINX_SERIALIZATION_VERSION", libs.versions.kotlinxSerializationJson.get())
+        buildConfigField("SLF4J_VERSION", libs.versions.slf4j.get())
+        buildConfigField("GUAVA_VERSION", libs.versions.guava.get())
+        buildConfigField("JUNIT_JUPITER_VERSION", libs.versions.junit.jupiter.get())
+        buildConfigField("COMPOSE_VERSION", libs.versions.jetbrains.compose.get())
+        buildConfigField("GRADLE_VERSION", libs.versions.gradleToolingApi.get())
+        buildConfigField("AGP_9_VERSION", libs.versions.agp9.get())
+        buildConfigField("ANDROIDX_COMPOSE_VERSION", libs.versions.androidxCompose.get())
+        buildConfigField("ANDROID_COMPILE_SDK", "35")
+        buildConfigField("ANDROID_MIN_SDK", "24")
+        buildConfigField("ANDROID_TARGET_SDK", "35")
+        buildConfigField("ANDROIDX_ACTIVITY_COMPOSE_VERSION", libs.versions.androidxActivityCompose.get())
+    }
     packageName("dev.rnett.gradle.mcp")
-    buildConfigField("APP_VERSION", provider { "${project.version}" })
-    buildConfigField("KOTLIN_VERSION", libs.versions.kotlin.get())
-    buildConfigField("KOTLINX_SERIALIZATION_VERSION", libs.versions.kotlinxSerializationJson.get())
-    buildConfigField("SLF4J_VERSION", libs.versions.slf4j.get())
-    buildConfigField("GUAVA_VERSION", libs.versions.guava.get())
-    buildConfigField("JUNIT_JUPITER_VERSION", libs.versions.junit.jupiter.get())
-    buildConfigField("COMPOSE_VERSION", libs.versions.jetbrains.compose.get())
     buildConfigField("GRADLE_VERSION", libs.versions.gradleToolingApi.get())
-    buildConfigField("AGP_9_VERSION", libs.versions.agp9.get())
-    buildConfigField("ANDROIDX_COMPOSE_VERSION", libs.versions.androidxCompose.get())
-    buildConfigField("ANDROID_COMPILE_SDK", "35")
-    buildConfigField("ANDROID_MIN_SDK", "24")
-    buildConfigField("ANDROID_TARGET_SDK", "35")
-    buildConfigField("ANDROIDX_ACTIVITY_COMPOSE_VERSION", libs.versions.androidxActivityCompose.get())
+    buildConfigField("APP_VERSION", provider { "${project.version}" })
 
     // need to manage manually
     buildConfigField("REPL_WORKER_JAR", "repl-worker.jar")
